# prinbee

./: .gitignore  CMakeLists.txt  README.md  TODO.md
cmake/: CMakeLists.txt  PrinbeeConfig.cmake
conf/: CMakeLists.txt  README.md  languages.conf  pb_proxy.service  pbql.conf  pbql.ini  prinbee-daemon.conf  prinbee-proxy.conf  prinbeed.service
conf/logger/: README.md  pbql.conf  prinbee-daemon.conf  prinbee-proxy.conf  prinbee.conf
cui/: CMakeLists.txt  console_connection.cpp  console_connection.h  cui.cpp  cui.h  interrupt.cpp  interrupt.h  main.cpp  messenger.cpp  messenger.h  ping_pong_timer.cpp  ping_pong_timer.h  proxy_connection.cpp  proxy_connection.h
daemon/: CMakeLists.txt  connection_reference.cpp  connection_reference.h  context_manager.cpp  context_manager.h  direct_listener.cpp  direct_listener.h  interrupt.cpp  interrupt.h  main.cpp  messenger.cpp  messenger.h  node_client.cpp  node_client.h  node_listener.cpp  node_listener.h  ping_pong_timer.cpp  ping_pong_timer.h  prinbee-daemon.cpp  prinbee_worker.cpp  prinbee_worker.h  prinbeed.cpp  prinbeed.h  prinbeed_context.cpp  prinbeed_ping_pong.cpp  proxy_listener.cpp  proxy_listener.h  worker_pool.cpp  worker_pool.h
debian/: changelog  control  copyright  prinbee-client.install  prinbee-daemon.install  prinbee-daemon.logrotate  prinbee-daemon.postinst  prinbee-daemon.postrm  prinbee-daemon.service  prinbee-doc.doc-base  prinbee-doc.install  prinbee-proxy.install  prinbee-proxy.logrotate  prinbee-proxy.postinst  prinbee-proxy.postrm  prinbee-proxy.service  prinbee.install  prinbee.sysuser  rules
doc/: ALGORITHMS.md  CACHE.md  CLIENT-SERVICE.md  CMakeLists.txt  COMMANDS.md  FILE-FORMAT.md  JOURNAL.md  LINKS.md  LOCKS.md  README.md  SCHEMA.md  architecture.odg  implementation.txt  prinbee-implementation.odt  prinbee-query-language.odt  prinbee.doxy.in
doc/cui/: CMakeLists.txt  alter-context.hlp  alter-index.hlp  alter-table.hlp  alter-type.hlp  basic.hlp  commands.hlp  config.hlp  create-context.hlp  help.hlp  quit.hlp  transaction.hlp
manager-plugins/: CMakeLists.txt
manager-plugins/database/: CMakeLists.txt  database.cpp  database.h
prinbee/: CMakeLists.txt  arch_support.h  error.cpp  error.h  exception.h  names.an  state.cpp  state.h  utils.cpp  utils.h  version.cpp  version.h.in
prinbee/bigint/: add.s  add128.s  add256.s  add512.s  add_sub.h  bigint.cpp  bigint.h  int512.cpp  int512.h  sub.s  sub128.s  sub256.s  sub512.s  uint512.cpp  uint512.h  utils.h
prinbee/block/: block.cpp  block.h  block_blob.cpp  block_blob.h  block_data.cpp  block_data.h  block_entry_index.cpp  block_entry_index.h  block_free_block.cpp  block_free_block.h  block_free_space.cpp  block_free_space.h  block_header.h  block_index_pointers.cpp  block_index_pointers.h  block_indirect_index.cpp  block_indirect_index.h  block_primary_index.cpp  block_primary_index.h  block_schema.cpp  block_schema.h  block_schema_list.cpp  block_schema_list.h  block_secondary_index.cpp  block_secondary_index.h  block_top_index.cpp  block_top_index.h  block_top_indirect_index.cpp  block_top_indirect_index.h
prinbee/data/: convert.cpp  convert.h  dbfile.cpp  dbfile.h  dbtype.h  language.cpp  language.h  schema.cpp  schema.h  script.cpp  script.h  structure.cpp  structure.h  tables.xsd  virtual_buffer.cpp  virtual_buffer.h  xml.cpp  xml.h
prinbee/database/: cell.cpp  cell.h  conditions.cpp  conditions.h  context.cpp  context.h  context_manager.cpp  context_manager.h  cursor.cpp  cursor.h  row.cpp  row.h  table.cpp  table.h
prinbee/file/: file_bloom_filter.cpp  file_bloom_filter.h  file_external_index.cpp  file_external_index.h  file_index.cpp  file_index.h  file_snap_database_table.cpp  file_snap_database_table.h  file_table.cpp  file_table.h  hash.cpp  hash.h
prinbee/journal/: journal.cpp  journal.h
prinbee/message-definitions/: CMakeLists.txt  PRINBEE_CURRENT_STATUS.conf  PRINBEE_GET_STATUS.conf  PRINBEE_PROXY_CURRENT_STATUS.conf
prinbee/network/: binary_client.cpp  binary_client.h  binary_message.cpp  binary_message.h  binary_server.cpp  binary_server.h  binary_server_client.cpp  binary_server_client.h  consistency.h  constants.h  crc16.cpp  crc16.h  ports.h  prinbee_connection.cpp  prinbee_connection.h  proxy_connection.cpp  proxy_connection.h  session.cpp  session.h
prinbee/pbql/: command.cpp  command.h  input.cpp  input.h  lexer.cpp  lexer.h  location.cpp  location.h  node.cpp  node.h  parse_expression.cpp  parser.cpp  parser.h  state.h
proxy/: CMakeLists.txt  connection_reference.cpp  connection_reference.h  daemon.cpp  daemon.h  interrupt.cpp  interrupt.h  listener.cpp  listener.h  main.cpp  messenger.cpp  messenger.h  ping_pong_timer.cpp  ping_pong_timer.h  prinbee-proxy.cpp  proxy.cpp  proxy.h  timeout_timer.cpp  timeout_timer.h
tests/: CMakeLists.txt  catch_bigint.cpp  catch_context.cpp  catch_convert.cpp  catch_dbfile.cpp  catch_hash.cpp  catch_journal.cpp  catch_main.cpp  catch_main.h  catch_network.cpp  catch_pbql_expression.cpp  catch_pbql_input.cpp  catch_pbql_lexer.cpp  catch_pbql_location.cpp  catch_pbql_node.cpp  catch_pbql_parser.cpp  catch_service_names.cpp  catch_structure.cpp  catch_utils.cpp  catch_version.cpp  catch_virtual_buffer.cpp  context.cpp  convert.cpp  crc16.php  crc16_benchmark.cpp  crc16_generate_random_file.cpp  crc16_in_prinbee.cpp  main.cpp  main.h  num.hpp  run_pbql_cui.sh  structure.cpp  systemctl  version.cpp  virtual_buffer.cpp  xml.cpp
tests/bloomfilter/: CMakeLists.txt  bloomfilter.cpp
tests/mmap/: mmap.cpp
tests/rprtr/: binary_client.rprtr
tools/: CMakeLists.txt  crc16.cpp  language_manager.cpp  prinbee_journal.cpp
