# Copyright (c) 2016-2025  Made to Order Software Corp.  All Rights Reserved
#
# https://snapwebsites.org/project/prinbee
# contact@m2osw.com
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.


VerifyMessageDefinitions(${CMAKE_CURRENT_SOURCE_DIR})

project(prinbee_message_definitions)

install(
    DIRECTORY
        ${CMAKE_CURRENT_SOURCE_DIR}/

    DESTINATION
        ${EVENTDISPATCHER_SHARE_MESSAGE_DEFINITIONS_CONF_DIR}

    FILES_MATCHING PATTERN
        "*.conf"
)

# vim: ts=4 sw=4 et
